--- a/runhacx.html
+++ b/runhacx.html
@@ -37,7 +37,7 @@
 				<div class="field-row">
 					<button type="button">Ok</button>
 					<button type="button">Cancel</button>
-					<button type="button">Browse...</button>
+					<button type="button">Browse....</button>
 				</div>
 			</div>
 		</div>
